--- a/styles/footer.css
+++ b/styles/footer.css
@@ -1,6 +1,6 @@
 .footer {
     background-color: #161B22;
-    position: absolute;
+    position: sticky;
     bottom: 0;
     width: 100%;
     height: 50px;
