--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,6 +7,8 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   background-color: #161B22;
+  height: auto;
+  min-height: 100vh;
 }
 
 a {
