--- a/styles/globals.css
+++ b/styles/globals.css
@@ -40,3 +40,15 @@ a {
 .card-title {
   text-align: center;
 }
+
+.image-container {
+  margin-bottom: 25px;
+  padding: 8px;
+  text-align: center;
+}
+
+.image {
+  object-fit: cover;
+  width: 100%;
+  height: 300px;
+}
